--- a/app/views/status/index.html.erb
+++ b/app/views/status/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Status#index</h1>
-<p>Find me in app/views/status/index.html.erb</p>
+<% @statuses.each do |s| %>
+<%= div_for s do %>
+<p> <%= s.body %></p>
+<% end %>
+<% end %>
