--- a/app/views/status/index.html.erb
+++ b/app/views/status/index.html.erb
@@ -1,3 +1,8 @@
+
+<%= link_to 'Previous page', page: @page - 1 %> 
+<%= link_to 'Next page', page: @page + 1 %>
+
+
 <% @statuses.each do |s| %>
 <%= div_for s do %>
 <p> <%= s.body %></p>
